--- a/home_template.html
+++ b/home_template.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
     <meta name="author" content="Johan Ehrenfors">
     <meta name="description" content="Main page for the Plonka initiative">
     <meta name="keywords" content="plonka, plogga, recycle, trash, garbage, startup, gig economy">
@@ -10,20 +9,24 @@
     <meta name="robots" content="all">
 
     <title>Plonka - Home</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/c/c9/Formal_Seal_of_Stockholm_University%2C_Stockholm%2C_Sverige.svg/1200px-Formal_Seal_of_Stockholm_University%2C_Stockholm%2C_Sverige.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" type = "text/css" href = "style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script type="text/javascript" src="scripts/functions.js"></script>
   </head>
 
   <body>
-
 ---INSERT_HEADER_HERE---
 
-      <div id="content">
-        <article>
-        </article>
-      </div>
+  <div class="content">
+    <article>
+      <h1>Sample text</h1>
+      <p>Lorem ipsum</p>
+    </article>
+
+  </div>
 
 ---INSERT_FOOTER_HERE---
-
   </body>
 </html>
