--- a/how-does-it-work_template.html
+++ b/how-does-it-work_template.html
@@ -11,7 +11,8 @@
 
     <title>Plonka - How does it work?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
