Landing page, fonts, etc

--- a/home_template.html
+++ b/home_template.html
@@ -20,11 +20,17 @@
 
 ---INSERT_HEADER_HERE---
 
-  <div class="content">
-    <article>
-      <h1>Sample text</h1>
-      <p>Lorem ipsum</p>
-    </article>
+  <div class="hero">
+    <h1>Tired of litter in your neighborhood?</h1>
+    <p>
+      Plonka is an initiative to clean up litter,
+      by providing an additional income for recent
+      newcomers, dog owners, or youth. Get started in minutes with BankID,
+      and work as much or as little as you want.
+    </p>
+    <div class="hero_button">
+      <a  href="how-does-it-work.php">Read more</a>
+    </div>
   </div>
 
 ---INSERT_FOOTER_HERE---
