--- a/sponsor_template.html
+++ b/sponsor_template.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script type="text/javascript" src="scripts/functions.js"></script>
   </head>
 
   <body>
@@ -20,10 +21,9 @@
 
 ---INSERT_HEADER_HERE---
 
-      <div id="content">
-        <article>
-        </article>
-      </div>
+    <article>
+      <h1>Do you want to help us out?</h1>
+    </article>
 
 ---INSERT_FOOTER_HERE---
 
