Remaining text content and tweaks

--- a/home_template.html
+++ b/home_template.html
@@ -20,7 +20,7 @@
 
 ---INSERT_HEADER_HERE---
 
-  <div class="hero">
+  <div id="hero_home" class="hero">
     <h1>Tired of litter in your neighborhood?</h1>
     <p>
       Plonka is an initiative to clean up litter,
@@ -32,6 +32,56 @@
       <a  href="how-does-it-work.php">Read more</a>
     </div>
   </div>
+
+  <article>
+    <h1>Anyone can be a Plonker!</h1>
+
+    <div class="user_stories">
+      <div class="user_story">
+        <div class="user_img">
+          <img src="media/img/user_story_student.jpg" alt="Picture of a high-school student">
+        </div>
+        <div class="user_text">
+          <h2>Stina Student</h2>
+          <h3>High school student</h3>
+          <p>
+            I use Plonka to earn some extra cash on the side.
+            I love the flexibility being able to decide exactly when and where I want to work.
+            Right now I'm saving up for my graduation!
+          </p>
+        </div>
+      </div>
+
+      <div class="user_story">
+        <div class="user_img">
+          <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="Picture of a newly immigrated man">
+        </div>
+        <div class="user_text">
+          <h2>Ali Nguyen</h2>
+          <h3>New Swedish resident</h3>
+          <p>
+            I recently moved to Sweden, but I'm struggling to enter the job market.
+            With Plonka I can focus whole-heartedly on learning the language during the days,
+            while still earning enough to get by.
+          </p>
+        </div>
+      </div>
+
+      <div class="user_story">
+        <div class="user_img">
+          <img src="media/img/user_story_dogowner.jpg" alt="Picture of a dog owner">
+        </div>
+        <div class="user_text">
+          <h2>Steven LaBrador</h2>
+          <h3>Dog owner</h3>
+          <p>
+            I take daily walks with my dog, and by picking up any trash I come by,
+            I actually earn money while keeping my dog safe and doing something I love!
+          </p>
+        </div>
+      </div>
+    </div>
+  </article>
 
 ---INSERT_FOOTER_HERE---
 
