--- a/how-does-it-work_template.html
+++ b/how-does-it-work_template.html
@@ -22,74 +22,87 @@
 ---INSERT_HEADER_HERE---
 
     <article>
-      <h1>Plonker Heroes</h1>
-      <p>INSERT USER STORIES HERE</p>
-
       <h1>Getting started is <b>super</b> simple. Hear us out.</h1>
-      <h2>1. Sign up using <i>BankID</i> &#129305;</h2>
-      <p>With BankID, you can sign all the necessary forms in a matter of minutes.
-        Since Plonkers are paid based on their performance,
-        you can start or stop working whenever you want - no strings attached.
-        You'll automatically get paid by the 25th of every month. &#128175;
-        If you don't love working with us,
-        your account will be terminated automatically after 6 months of inactivity.
-      </p>
-      <h2>2. Gear up and get Plonking! &#129508;</h2>
-      <p>
-        You don't need anything else than a smartphone on a lanyard around your neck to get started -
-        but you may want to wear working gloves and warm clothes.
-        Sign in on the <a href="https://www.google.com/">Plonka app</a>, and
-        set your sights on the closest Plonka clean-up zone &#128640; - sponsored by the local government, an environmentally
-        conscious company, or even your friendly neighborhood eco-ninja. &#128125;
-      </p>
+      <div class="steps_container">
+        <div class="step">
+          <h2>1. Sign up using <i>BankID</i> &#129305;</h2>
+          <p>
+            First, download the <a href="https://www.google.com/">Plonka app</a>.
+            With BankID, you can sign all the necessary forms in a matter of minutes.
+            Since Plonkers are paid based on their performance,
+            you can start or stop working whenever you want - no strings attached. &#128175;
+          </p>
+          <p>
+            If you don't love working with us,
+            your account will be terminated automatically after 6 months of inactivity
+             - you don't have to do a thing!
+          </p>
+        </div>
 
-      <p>
-        Start your clean-up session by pressing the big "Get Plonking!" button that
-        should have appeared once you entered the zone. Now, your phone will track your location and record a low-resolution video of
-        your session, to prove that you're cleaning up the world. Once you've disposed of your collected trash in a public bin,
-        you can end your session, you'll get paid 50 SEK per filled bag.
-      </p>
+        <div class="step">
+          <h2>2. Gear up and get Plonking! &#129508;</h2>
+          <p>
+            You don't need anything more than a smartphone on a lanyard around your neck and a dataplan to get started -
+            but you may want to wear working gloves and warm clothes.
+            Start up the app and set your sights on the closest clean-up zone. &#128640;
+          </p>
+          <p>
+            Start your clean-up session once you've entered the zone. Your phone will track your location and record a low-resolution video of
+            your session. Dispose of your collected trash in a public bin,
+            end your session, and get paid 50 SEK per filled bag.
+          </p>
+        </div>
 
-      <h2>3. Payday &#128526;</h2>
+        <div class="step">
+          <h2>3. Payday &#128526;</h2>
+          <p>
+            By the 25th each month, you'll receive your well-earned balance.
+            Since you are employed by us, we handle all the paperwork,
+            and you don't have to worry about reporting taxes.
+            Can't get any simpler, right? And guess what - you're making a difference for the local environment! &#127795;
+          </p>
 
-      <p>
-        By the 25th each month, you'll have received the balance you've worked hard for.
-        Since you are actually employed by us, we handle all the paperwork,
-        and you don't have to worry about reporting taxes for additional income streams.
-        Can't get any simpler, right? And guess what - you're making a difference for the local environment! &#127795;
-      </p>
+        </div>
+
+      </div>
 
       <p>
         During your first five sessions, collecting litter in any regular sized plastic bag will do.
-        If you want to continue after this, we will provide you with a starter kit containing individually numbered Plonka-branded
+        If you want to continue after this, we will provide you with a free starter kit containing individually numbered Plonka-branded
         environmentally-friendly plastic bags as well as your choice of working gloves or a picker.
       </p>
+    </article>
 
+    <div class="tilted_img">
+      <img src="media/img/can_grass.jpg" alt="A photo of litter on the ground">
+    </div>
+
+    <article>
       <h1>Who pays for all this?</h1>
-      <p>Don't worry - we're not here to rip you off. You won't get rich,
-        but Plonka is a really quick way for you to get a legitimate job -
-        no language skills or previous experience required.
-        Our goal is to get sponsored from a variety of environmentally conscious superstars,
-        such as the local government, companies working on their Corporate Social Responsibility (CSR), and donations from local eco-ninjas.
-      </p>
+      <div class="text_columns">
+        <p>Don't worry - we're not here to rip you off. You won't get rich,
+          but Plonka is a really quick way for you to get a legitimate job -
+          no language skills or previous experience required.
+          Our goal is to get sponsored from a variety of environmentally conscious superstars,
+          such as the local government, companies working on their Corporate Social Responsibility (CSR), and donations from local eco-ninjas.
+        </p>
 
-      <p>
-        And why would they want to pay for someone to pick up litter, you ask? Simple - providing social benefits
-        is expensive, and this is a scalable way of providing jobs for pretty much any able-bodied nature-lovers.
-        Additionally, it keeps the local neighborhood clean and safe, both for pets and local wildlife, decreases
-        local poverty, and provides a sense of responsibility for the local environment.
-        So, instead of donating a half a goat (the front or the back, I wonder..?) to a family in
-        a developing, why not help someone closer, while also keeping your neighborhood clean?
-      </p>
+        <p>
+          And why would they want to pay for someone to pick up litter, you ask? Simple - providing social benefits
+          is expensive, and this is a scalable way of providing jobs for pretty much any able-bodied nature-lovers.
+          Additionally, it keeps the local neighborhood clean and safe, both for pets and local wildlife, decreases
+          local poverty, and provides a sense of responsibility for the local environment.
+          So, instead of donating a half a goat (the front or the back, I wonder..?) to a family in
+          a developing, why not help someone closer, while also keeping your neighborhood clean?
+        </p>
 
-      <p>
-        The people behind Plonka get paid for the time they put in, but this is not meant to be a
-        venture-backed unicorn headed for Mars - we just want to make the world a slightly more fair place.
-        In order to do this, we reserve a maximum of 10% for our own salaries, marketing, and keeping the initiative running -
-        everything else will go to our Plonkers! We aren't bonkers, just a little naïve, we promise.
-      </p>
-
-
+        <p>
+          The Plonka founders get paid for the time they put in, but this initiative is not meant to be a
+          venture-backed unicorn headed for the stars - we just want to make the world a slightly more fair place.
+          In order to do this, we reserve a maximum of 10% for our own salaries, marketing, and keeping the initiative running -
+          everything else will go to our Plonkers! We aren't completely bonkers, we promise.
+        </p>
+      </div>
 
     </article>
 
