--- a/mission_template.html
+++ b/mission_template.html
@@ -21,10 +21,64 @@
 
 ---INSERT_HEADER_HERE---
 
-      <div id="content">
-        <article>
-        </article>
+      <div id="hero_mission" class="hero">
+        <h1>Our mission:</h1>
+        <p>Truly sustainable gig work</p>
       </div>
+
+      <article>
+        <div class="narrow_on_desktop">
+          <h1>Socially sustainable</h1>
+          <p>
+            Plonka presents job opportunities that are available instantly to almost anyone.
+            No interviews, automated paperwork, and payment for performance, rather than time,
+            means that our service can work for anyone. All we require is that workers are
+            physically able to collect litter, can follow basic instructions, and have access
+            to a smartphone with a dataplan. The rest is up to the Plonker, such as when and where to work.
+          </p>
+          <p>
+            We offer the equivalent of roughly 100 SEK per hour (depending on work performance),
+            and cover insurance while working. For many people, this is an opportunity to go from
+            unemployeed to making some money on the side - instead of (or in combination with) digging through
+            bins in search of recyclable bottles and cans. We probably can't offer an alternative
+            to a full-time job, but an important step towards self-sufficiency and dignity.
+          </p>
+        </div>
+      </article>
+
+      <div class="tilted_img">
+        <img src="media/img/litter_forest.jpg" alt="A photo of litter in a forest">
+      </div>
+
+      <article>
+        <div class="narrow_on_desktop">
+          <h1>Economically sustainable</h1>
+          <p>
+            By operating as a social initiative, rather than as a profit-maximizing startup,
+            we can offer competitive rates for cleaning up litter in the local area.
+            The service and business components scale well, meaning that the founders
+            themselves often don't need to put in any time whenever a new Plonker signs up.
+            As a result, we only take enough for us to cover internal salaries and development,
+            and the rest goes towards providing job opportunities.
+          </p>
+        </div>
+      </article>
+
+      <div class="tilted_img">
+        <img src="media/img/dog_water.jpg" alt="A photo of a dog approaching a polluted lake">
+      </div>
+
+      <article>
+        <div class="narrow_on_desktop">
+          <h1>Environmentally sustainable</h1>
+          <p>
+            By cleaning up litter in public areas, we make sure to keep parks and woodlands
+            naturally beautiful, while minimizing the risk of harm to the local wildlife and pets.
+            To some degree, the work put in by our Plonkers minimizes the amount of micro-plastics
+            found in nature.
+          </p>
+        </div>
+      </article>
 
 ---INSERT_FOOTER_HERE---
 
