--- a/sponsor_template.html
+++ b/sponsor_template.html
@@ -21,8 +21,102 @@
 
 ---INSERT_HEADER_HERE---
 
+    <div id="hero_sponsor" class="hero">
+      <h1>Do you want to sponsor a clean-up?</h1>
+    </div>
+
     <article>
-      <h1>Do you want to help us out?</h1>
+      <h1>Let's be transparent.</h1>
+      <div class="text_columns">
+        <p>
+          Plonka relies solely on goodwill from companies or individuals who want to provide
+          safe and sustainable job opportunities to people in the local community, by letting
+          Plonka users, known as Plonkers, clean up litter in the vicinity of their homes.
+          This is meant to keep common areas, such as parks, naturally beautiful.
+        </p>
+        <p>
+          Plonkers join our platform for a variety of reasons, whether it is to supplement
+          their income in times of need or simply because they want to clean up their local
+          environment. Our goal is to provide an always-available, no-questions-asked job
+          opportunity for able-bodied individuals who may otherwise struggle to find a job,
+          whether due to limited experience, lacking social skills, or other reasons.
+        </p>
+        <p>
+          By recording the worker sessions using both GPS-coordinates and a low resolution video
+          feed, we are able to verify that actual value has been delivered by paying per bag
+          filled with litter, without putting any time pressure on the Plonker.
+          Plonkers are able to work wherever and whenever it suits them, without having to stick to a schedule.
+          In short, Plonka strives to be accessible for pretty much anyone with a smartphone, whether
+          said person is just wants an additional reason to go out and care for their neighborhood
+          in their free time or uses Plonka as a replacement for a traditional job.
+        </p>
+      </div>
+
+      <h1>We take care of all the administration.</h1>
+      <div class="text_columns">
+        <p>
+          Anyone who is at least 18 years old and has a valid personal number, can use BankID to sign up
+          to work for Plonka through our automated on-boarding process. We take care of all the legal paperwork,
+          provide a basic insurance while on the job, and handle salaries. This means that companies or the
+          local municipality can use Plonka for any cleaning up that needs to be done, without any of the hassle.
+        </p>
+      </div>
+
+      <h1>So what is our cut?</h1>
+      <div class="text_columns">
+        <p>
+          Plonka isn't striving to make big money, although we operate like a startup. We take a flat fee of
+          10% of all sponsorship money to cover development, internal salaries, legal work, marketing, etc.
+          The rest goes to our Plonkers or to the people currently manually verifying each clean-up session.
+          Plonka also qualifies as a social enterprise, which means that no sales tax is necessary (uh, there's a slim chance at least...).
+        </p>
+        <p>
+          It won't make us rich, but we aim to make the world a slightly better place for everyone involved.
+          The Plonka platform has been built from the ground up to be highly scalable, which means that once we
+          are fully up and running, the company will operate with minimal costs, and providing the maximum possible
+          benefit to the local community - both people and the environment.
+        </p>
+      </div>
+
+      <h1>Here's how you can help!</h1>
+      <div class="text_columns">
+        <p>
+          Does everything sound good so far? Fantastic!
+        </p>
+        <p>
+          If you are a company, please get in touch with us using the contact details below, and we'll send you an invoice.
+          The information we need from you is the following:
+        </p>
+
+        <ul>
+          <li>Company name and tax number</li>
+          <li>Sponsorship sum (50 SEK fills one 10L bag)</li>
+          <li>Center GPS coordinate(s) or address, and a radius (0.5-5km) for your clean-up zone(s)</li>
+          <li>Whether you want to receive the GPS and video information from your zone(s)</li>
+        </ul>
+
+        <p>
+          Note that, if a clean-up session spans across multiple overlapping zones,
+          the Plonker's salary will be paid proportionally to the time spent in each zone.
+          Once a zone's remaining designated sponsorship money reaches less than 50 SEK,
+          the remaining money is moved to a nearby zone to allow for full bags of litter to be collected.
+        </p>
+
+      </div>
+
+      <h2>Interested in making a private donation through Swish?</h2>
+      <p>
+        We will soon set up a Swish-number in order to accept private donations.
+        Please enter your email to be notified when we do so below.
+        Your contact information will not be used for any other purpose.
+      </p>
+      <form method="post" enctype="multipart/form-data" action="sponsor_save_email.php">
+          <input id="email_input" type="email" name="email" placeholder="Enter your email here" required>
+          <button type="submit" name="form_submission">
+            <i class="material-icons">send</i>
+          </button>
+      </form>
+
     </article>
 
 ---INSERT_FOOTER_HERE---
