--- a/snippet_template.html
+++ b/snippet_template.html
@@ -43,7 +43,7 @@
             </div>
           </div>
         </div>
-        <div class = "menu_expand"
+        <div class = "menu_expand">
           <a href="javascript:void(0);" class="icon" onclick="toggleDropdownMenu()">
             <i class="material-icons">menu</i>
           </a>
@@ -80,11 +80,11 @@
         <div id="footer_center"></div>
 
         <div id="footer_additional">
-          <h2>More (placeholder) links</h2>
-          <p>About us</p>
-          <p>Career</p>
-          <p>Legal</p>
-          <p>FAQ</p>
+          <h2>More links</h2>
+          <p><a href="https://www.google.com">About us</a></p>
+          <p><a href="https://www.google.com">Career</a></p>
+          <p><a href="https://www.google.com">Legal</a></p>
+          <p><a href="https://www.google.com">FAQ</a></p>
         </div>
       </div>
     </footer>
