--- a/sponsor_template.html
+++ b/sponsor_template.html
@@ -111,10 +111,12 @@
         Your contact information will not be used for any other purpose.
       </p>
       <form method="post" enctype="multipart/form-data" action="sponsor_save_email.php">
+        <div class="form_row">
           <input id="email_input" type="email" name="email" placeholder="Enter your email here" required>
           <button type="submit" name="form_submission">
-            <i class="material-icons">send</i>
+            Submit
           </button>
+        </div>
       </form>
 
     </article>
